[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/catan_background.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/game/score/score_popup.gd" type="Script" id=3]

[node name="ScorePopup" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -720.0
margin_bottom = -280.0
popup_exclusive = true
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VCon" type="VBoxContainer" parent="."]
anchor_left = 0.154167
anchor_top = 0.28
anchor_right = 0.846667
anchor_bottom = 0.85
margin_right = -6.10352e-05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="TurnCon" type="HBoxContainer" parent="VCon"]
margin_right = 831.0
margin_bottom = 66.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VCon/TurnCon"]
margin_right = 415.0
margin_bottom = 66.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "总回合数:"

[node name="Num" type="Label" parent="VCon/TurnCon"]
margin_left = 415.0
margin_right = 831.0
margin_bottom = 66.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "10"
align = 2

[node name="TimeCon" type="HBoxContainer" parent="VCon"]
margin_top = 70.0
margin_right = 831.0
margin_bottom = 136.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VCon/TimeCon"]
margin_right = 415.0
margin_bottom = 66.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "总时间数:"

[node name="Num" type="Label" parent="VCon/TimeCon"]
margin_left = 415.0
margin_right = 831.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "10"
align = 2

[node name="DiceCon" type="HBoxContainer" parent="VCon"]
margin_top = 140.0
margin_right = 831.0
margin_bottom = 440.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VCon/DiceCon"]
margin_right = 215.0
margin_bottom = 300.0
size_flags_vertical = 3
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "骰子分布:"

[node name="DiceScroll" type="ScrollContainer" parent="VCon/DiceCon"]
margin_left = 215.0
margin_right = 831.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_group_": true
}

[node name="DiceItems" type="VBoxContainer" parent="VCon/DiceCon/DiceScroll"]
margin_right = 616.0
rect_min_size = Vector2( 600, 0 )

[node name="WinnerCon" type="HBoxContainer" parent="."]
anchor_left = 0.387917
anchor_top = 0.12625
anchor_right = 0.612083
anchor_bottom = 0.20875
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="WinnerCon"]
margin_right = 165.0
margin_bottom = 66.0
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "胜利者:"

[node name="Name" type="Label" parent="WinnerCon"]
margin_left = 169.0
margin_right = 269.0
margin_bottom = 66.0
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
text = "阿峰"

[node name="Confirm" type="Button" parent="."]
anchor_left = 0.426667
anchor_top = 0.9
anchor_right = 0.576667
anchor_bottom = 0.9475
text = "退回到准备界面"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_down" from="Confirm" to="." method="_on_confirm_exit"]
